--- a/package.json
+++ b/package.json
@@ -21,8 +21,16 @@
         "vite": "^5.0.0"
     },
     "dependencies": {
+        "@faker-js/faker": "^8.3.1",
         "@heroicons/react": "^2.1.1",
         "@material-tailwind/react": "^2.1.8",
-        "lucide-react": "^0.303.0"
+        "@tanstack/react-table": "^8.11.6",
+        "@tanstack/solid-table": "^8.11.6",
+        "chart.js": "^4.4.1",
+        "flowbite": "^2.2.1",
+        "lucide-react": "^0.303.0",
+        "react-chartjs-2": "^5.2.0",
+        "react-table": "^7.8.0",
+        "xlsx": "^0.18.5"
     }
 }
