--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dependencies": {
         "@faker-js/faker": "^8.3.1",
         "@heroicons/react": "^2.1.1",
+        "@inertiajs/inertia": "^0.11.1",
         "@material-tailwind/react": "^2.1.8",
         "@tanstack/react-table": "^8.11.6",
         "@tanstack/solid-table": "^8.11.6",
