--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     },
     "devDependencies": {
         "@headlessui/react": "^1.4.2",
-        "@inertiajs/react": "^1.0.0",
+        "@inertiajs/react": "^1.0.14",
         "@tailwindcss/forms": "^0.5.3",
         "@vitejs/plugin-react": "^4.2.0",
         "autoprefixer": "^10.4.12",
@@ -24,10 +24,12 @@
         "@faker-js/faker": "^8.3.1",
         "@heroicons/react": "^2.1.1",
         "@inertiajs/inertia": "^0.11.1",
+        "@inertiajs/inertia-react": "^0.8.1",
         "@material-tailwind/react": "^2.1.8",
         "@tanstack/react-table": "^8.11.6",
         "@tanstack/solid-table": "^8.11.6",
         "chart.js": "^4.4.1",
+        "date-fns": "^3.3.0",
         "flowbite": "^2.2.1",
         "flowbite-react": "^0.7.2",
         "lucide-react": "^0.303.0",
