--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
     "private": true,
     "type": "module",
     "scripts": {
-        
         "dev": "vite",
         "build": "vite build"
     },
@@ -33,6 +32,7 @@
         "date-fns": "^3.3.0",
         "flowbite": "^2.2.1",
         "flowbite-react": "^0.7.2",
+        "framer-motion": "^11.0.8",
         "lucide-react": "^0.303.0",
         "react-chartjs-2": "^5.2.0",
         "react-table": "^7.8.0",
